@startuml

title __GRAPHS's Class Diagram__\n

  namespace Practica2 {
    namespace Graphs {
      class Practica2.Graphs.BarChart {
          + BarChart()
          + display()
      }
    }
  }
  

  namespace Practica2 {
    namespace Graphs {
      class Practica2.Graphs.BarChartDataBase {
          + createDataBase()
      }
    }
  }
  

  namespace Practica2 {
    namespace Graphs {
      abstract class Practica2.Graphs.Chart {
          ~ xAxis : int
          ~ yAxis : int
          + Chart()
          {abstract} + display()
      }
    }
  }
  

  namespace Practica2 {
    namespace Graphs {
      class Practica2.Graphs.LineChart {
          + LineChart()
          + display()
      }
    }
  }
  

  namespace Practica2 {
    namespace Graphs {
      class Practica2.Graphs.LineChartDataBase {
          + createDataBase()
      }
    }
  }
  

  namespace Practica2 {
    namespace Graphs {
      interface Practica2.Graphs.iCreateDataBase {
          {abstract} + createDataBase()
      }
    }
  }
  

  Practica2.Graphs.BarChart -up-|> Practica2.Graphs.Chart
  Practica2.Graphs.BarChartDataBase .up.|> Practica2.Graphs.iCreateDataBase
  Practica2.Graphs.Chart -up-|> org.jfree.ui.ApplicationFrame
  Practica2.Graphs.Chart o-- Practica2.Graphs.iCreateDataBase : createDataBase
  Practica2.Graphs.LineChart -up-|> Practica2.Graphs.Chart
  Practica2.Graphs.LineChartDataBase .up.|> Practica2.Graphs.iCreateDataBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
